--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="welcome-text">		
             <h6>I Am Anish Singh Chauhan </h6>
 		<div class="element1">I'm a thinker.</div>            
-            <a href="mailto:email2akchauhan001@gmail.com" class="btn-style2 hire-btn">MAIL ME</a>
+            <a href="mailto:email2akchauhan001@gmail.com" class="btn-primary">MAIL ME</a>
 		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hey, I have contacted you through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
 		<a href="tel:9771685829" class="btn-style2 hire-btn">CALL ME</a>	
         </div>
