--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
         <div class="welcome-text">		
             <h6>I Am Anish Singh Chauhan </h6>
 		<div class="element1">I'm a thinker.</div>            
-            <a href="mailto:email2akchauhan001@gmail.com" class="button button-rounded button-tiny">MAIL ME</a>
-		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hey, I have contacted you through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
-		<a href="tel:9771685829" class="btn-style2 hire-btn">CALL ME</a>	
+            <a href="mailto:email2akchauhan001@gmail.com" class="but-style2 hire-btn">MAIL</a>
+								 
+		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hey, I have contacted you through your website." class="btn-style2 hire-btn">WHATSAPP</a>
+		<a href="tel:9771685829" class="btn-style2 hire-btn">CALL</a>	
         </div>
     </section>
     <!--End Welcome Section-->
