--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                            <img src="i.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"A BEAUTY WHICH IS LOVED YET"</strong></h8></p><br/>
 <a href="p.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
+				    <div class="sharethis-inline-reaction-buttons"></div>
 			    </div>
                         </div>
                     </div>
@@ -285,6 +286,7 @@
 				    <img src="k.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"INTERVAL"</strong></h8></p><br/>
 <a href="first.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
+				    <div class="sharethis-inline-reaction-buttons"></div>
                             </div>
                         </div>
                     </div>
@@ -298,6 +300,7 @@
 				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"MY HEART STILL BEATS FOR YOU"</strong></h8></p><br/>
 <a href="second.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
+				    <div class="sharethis-inline-reaction-buttons"></div>
                             </div>
                         </div>
                     </div>
@@ -310,6 +313,7 @@
 				    <img src="j.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"SWEETHEART FOREVER"</strong></h8></p><br/>
 <a href="q.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
+				    <div class="sharethis-inline-reaction-buttons"></div>
                             </div>
                         </div>
                     </div>
