--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			LIKES
 			</h6>
 		<ul>
-			<li><i>Aloofness.</i></li>
+			<em><li><i>Aloofness.</i></li>
 			<li><i>Listening to soft instrumental music.</i></li>
 			<li><i>Nature.</i></li>
 			<li><i>To appreciate achievements/good qualities irrespective of any barrier.</i></li>
@@ -132,7 +132,7 @@
 			<li><i>To roam about the world.</i></li>
 			<li><i>Chocolates.</i></li>
 			<li><i>To wish someone very special before wishing anyone.</i></li>
-			<li><strong>And many more things.....</strong></li>
+			<li><strong>And many more things.....</strong></li></em>
 			</ul><br/>
 		<h6 class="section-title">
 			DISLIKES
