--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
                            <img src="i.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"A BEAUTY WHICH IS LOVED YET"</strong></h8></p><br/>
 <a href="p.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
+<!-- LikeBtn.com BEGIN -->
+<span class="likebtn-wrapper" data-identifier="item_1"></span>
+<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
+<!-- LikeBtn.com END -->
 				    <div class="sharethis-inline-reaction-buttons"></div>
 			    </div>
                         </div>
