--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
 <p><h8>Click here to go through the poem <strong>"INTERVAL"</strong></h8></p><br/>
 <a href="first.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
 				    <div class="sharethis-inline-reaction-buttons"></div>
+				    <script type="text/javascript" src="//100widgets.com/js_data.php?id=259"></script>
                             </div>
                         </div>
                     </div>
