--- a/index.html
+++ b/index.html
@@ -385,6 +385,10 @@
                             </div>
                         </div>
                     </div>
+			<h3>Rate us</h3><!-- start Star Ratings and Reviews -->
+<script data-sil-id='5b36558957d160001b85df2c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/star-rating/5b36558957d160001b85df2c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script>
+<script type='application/ld+json' src='//bawkbox.com/widget/star-rating/5b36558957d160001b85df2c/microdata'></script><div class='sil-widget-star-rating sil-widget' id='sil-widget-5b36558957d160001b85df2c'><a href='https://bawkbox.com/install/star-rating'>Star Ratings and Reviews</a></div>
+<!-- end Star Ratings and Reviews -->
                  <!--   <div class="col-md-offset-2 col-md-8">
                         <div class="col-md-12">
                             <div class="contact-form">
