--- a/index.html
+++ b/index.html
@@ -289,7 +289,10 @@
 				    <img src="k.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"INTERVAL"</strong></h8></p><br/>
 <a href="first.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
-				    
+				  <!-- LikeBtn.com BEGIN -->
+<span class="likebtn-wrapper" data-identifier="item_2"></span>
+<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
+<!-- LikeBtn.com END -->  
 				  
                             </div>
                         </div>
@@ -305,7 +308,7 @@
 <p><h8>Click here to go through the poem <strong>"MY HEART STILL BEATS FOR YOU"</strong></h8></p><br/>
 <a href="second.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
 				    <!-- LikeBtn.com BEGIN -->
-<span class="likebtn-wrapper" data-identifier="item_1"></span>
+<span class="likebtn-wrapper" data-identifier="item_3"></span>
 <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
 <!-- LikeBtn.com END -->
 				                               </div>
@@ -321,7 +324,7 @@
 <p><h8>Click here to go through the poem <strong>"SWEETHEART FOREVER"</strong></h8></p><br/>
 <a href="q.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
 			<!-- LikeBtn.com BEGIN -->
-<span class="likebtn-wrapper" data-identifier="item_1"></span>
+<span class="likebtn-wrapper" data-identifier="item_4"></span>
 <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
 <!-- LikeBtn.com END -->	    
                             </div>
