--- a/index.html
+++ b/index.html
@@ -392,6 +392,10 @@
 <script data-sil-id='5b36558957d160001b85df2c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/star-rating/5b36558957d160001b85df2c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script>
 <script type='application/ld+json' src='//bawkbox.com/widget/star-rating/5b36558957d160001b85df2c/microdata'></script><div class='sil-widget-star-rating sil-widget' id='sil-widget-5b36558957d160001b85df2c'><a href='https://bawkbox.com/install/star-rating'>Star Ratings and Reviews</a></div>
 <!-- end Star Ratings and Reviews -->
+			<h3>Contact Us</h3><!-- start Contact Box -->
+<script data-sil-id='5b37470357d160001b85e132'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/contact/5b37470357d160001b85e132?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script>
+<div class='sil-widget-contact sil-widget' id='sil-widget-5b37470357d160001b85e132'><a href='https://htmlcontactbox.com'>Contact Box</a></div>
+<!-- end Contact Box -->
                  <!--   <div class="col-md-offset-2 col-md-8">
                         <div class="col-md-12">
                             <div class="contact-form">
