--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <!--Start Services Section-->
     <section class="services padding-style1" id="academic">
         <div class="services-header">
-            <h4 class="section-title">MY ACADEMIC</h4>
+            <h4 class="section-title">MY ACADEMICS</h4>
         </div>
         <div class="services-content">
             <div class="container">
@@ -263,7 +263,7 @@
                             <div class="experience-content">
                                 <h6>INTERVAL</h6>
                                 <p>This poem is all about the existence of momentary love.</p>
-				    <img src="k.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
+				    <img src="k.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"INTERVAL"</strong></h8></p><br/>
 <a href="first.html" title="GO TO POEM PAGE"><center> Click here.</center></a>	  
                             </div>
